# namedb

./: CMakeLists.txt  README.md
src/: dname.c  dname.h  main.c  simd.c  simd.h  tree.c  tree.h
